--- a/charts/opencloud-microservices/deployments/helm/helmfile.yaml
+++ b/charts/opencloud-microservices/deployments/helm/helmfile.yaml
@@ -22,7 +22,7 @@ releases:
           level: debug # Set logging level for OpenCloud components.
       - externalDomain: cloud.opencloud.test # Main domain for OpenCloud access.
       - image:  
-          tag: "4.0.0-rc.1"
+          tag: ""
       # --- Core Components Configuration ---
       - keycloak:
           enabled: true # Enable Keycloak for authentication.
@@ -97,7 +97,7 @@ releases:
               # Space Administrator Role set to 100GB
               '2aadd357-682c-406b-8874-293091995fdd': 0
           virusscan:
-            enabled: false
+            enabled: true
             infectedFileHandling: "abort"
             scannerType: "clamav"
             clamavSocket: "tcp://clamav.clamav.svc.cluster.local:3310"
@@ -240,7 +240,7 @@ releases:
       - services:
           nats:
             deploymentStrategy:
-              type: Recreate
+              type: RollingUpdate
               rollingUpdate:
                 maxSurge: 25%
                 maxUnavailable: 25%
