--- a/.github/workflows/publish-helm-charts.yml
+++ b/.github/workflows/publish-helm-charts.yml
@@ -34,12 +34,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Lowercase the repo owner
-        run: |
-          echo "REPO_OWNER=${OWNER,,}" >>${GITHUB_ENV}
-        env:
-          OWNER: '${{ github.repository_owner }}'
-
       - name: Set up chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
@@ -70,11 +64,11 @@ jobs:
           helm package charts/opencloud
           
           # Push to GHCR
-          helm push opencloud-*.tgz oci://ghcr.io/${{ env.REPO_OWNER }}/helm-charts/
+          helm push opencloud-*.tgz oci://ghcr.io/${{ github.repository_owner }}/helm-charts/
           
           # Verify the pushed chart
           echo "Verifying the pushed chart..."
-          helm pull oci://ghcr.io/${{ env.REPO_OWNER }}/helm-charts/opencloud --version $(helm show chart charts/opencloud | grep version | awk '{print $2}')
+          helm pull oci://ghcr.io/${{ github.repository_owner }}/helm-charts/opencloud --version $(helm show chart charts/opencloud | grep version | awk '{print $2}')
 
       - name: Package and push OpenCloud Dev chart
         run: |
@@ -88,11 +82,11 @@ jobs:
           helm package charts/opencloud-dev
           
           # Push to GHCR
-          helm push opencloud-dev-*.tgz oci://ghcr.io/${{ env.REPO_OWNER }}/helm-charts/
+          helm push opencloud-dev-*.tgz oci://ghcr.io/${{ github.repository_owner }}/helm-charts/
           
           # Verify the pushed chart
           echo "Verifying the pushed chart..."
-          helm pull oci://ghcr.io/${{ env.REPO_OWNER }}/helm-charts/opencloud-dev --version $(helm show chart charts/opencloud-dev | grep version | awk '{print $2}')
+          helm pull oci://ghcr.io/${{ github.repository_owner }}/helm-charts/opencloud-dev --version $(helm show chart charts/opencloud-dev | grep version | awk '{print $2}')
       
       - name: Package and push OpenCloud Microservice chart
         run: |
@@ -106,8 +100,8 @@ jobs:
           helm package charts/opencloud-microservices
           
           # Push to GHCR
-          helm push opencloud-microservices-*.tgz oci://ghcr.io/${{ env.REPO_OWNER }}/helm-charts/
+          helm push opencloud-microservices-*.tgz oci://ghcr.io/${{ github.repository_owner }}/helm-charts/
           
           # Verify the pushed chart
           echo "Verifying the pushed chart..."
-          helm pull oci://ghcr.io/${{ env.REPO_OWNER }}/helm-charts/opencloud-microservices --version $(helm show chart charts/opencloud-microservices | grep version | awk '{print $2}')
+          helm pull oci://ghcr.io/${{ github.repository_owner }}/helm-charts/opencloud-microservices --version $(helm show chart charts/opencloud-microservices | grep version | awk '{print $2}')          
