--- a/charts/opencloud-microservices/templates/ocm/deployment.yaml
+++ b/charts/opencloud-microservices/templates/ocm/deployment.yaml
@@ -74,7 +74,7 @@ spec:
             - name: OC_JWT_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: "jwt-secret"
+                  name: {{ include "secrets.jwtSecret" . }}
                   key: jwt-secret
 
             - name: OCM_OCM_INVITE_MANAGER_INSECURE
