--- a/charts/opencloud-microservices/templates/graph/deployment.yaml
+++ b/charts/opencloud-microservices/templates/graph/deployment.yaml
@@ -203,6 +203,12 @@ spec:
                   name: {{ include "secrets.machineAuthAPIKeySecret" . }}
                   key: machine-auth-api-key
 
+            - name: OC_SYSTEM_USER_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.storageSystemSecret" . }}
+                  key: api-key
+
             - name: OC_SYSTEM_USER_ID
               valueFrom:
                 secretKeyRef:
