--- a/charts/opencloud-microservices/templates/frontend/deployment.yaml
+++ b/charts/opencloud-microservices/templates/frontend/deployment.yaml
@@ -50,6 +50,8 @@ spec:
               value: {{ .Values.logging.level | quote }}
             - name: FRONTEND_LOG_PRETTY
               value: {{ .Values.logging.pretty | quote }}
+            - name: FRONTEND_CHECK_FOR_UPDATES
+              value: "false"
 
             - name: FRONTEND_TRACING_ENABLED
               value: "{{ .Values.tracing.enabled }}"
